sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:15: error: Unmatched closing brace '}' ignored here
 		}
                ^AlgBubbleSort1:16: error: illegal start of simple expression
 while ( inv == false ) }
                        ^AlgBubbleSort1:21: error: 'while' expected but '}' found.
}
^